# graphql_mongo_rs

./: Cargo.toml  README.md  docker-compose.yml
gql_server_rs/: Cargo.toml  Dockerfile
gql_server_rs/src/: lib.rs
gql_server_rs/src/model/: mod.rs
src/: lib.rs
src/hotel/: mod.rs
src/model/: mod.rs
