[package]
name = "gql_server_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "gql_server_rs"
path = "src/lib.rs"

[[bin]]
name = "gql_server_rs"
path = "src/bin/main.rs"

[dependencies]
async-graphql = "4.0.1"
async-graphql-actix-web = "4.0.1"
actix-web = { version = "4.0.1", default-features = false, features = [
    "macros",
] }
mongodb = "2.2.1"
serde = { version = "1.0.137", features = ["derive"] }
sha2 = "0.10.2"
base64ct = { version = "1.5.0", features = ["alloc"] }
futures = "0.3.21"
type_pubsub = "0.2.0"
tokio = "1.18.2"
async-stream = "0.3.3"
